Adding/Deleting/Leaving team

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -115,3 +115,10 @@ place.edit.submit: Modify place
 
 place.edit.addNewTimeslot.button: Add new time slot
 #Add new TimeSlotForm
+
+#team
+team.added: New team created
+team.deleted: Team deleted
+team.leave: You left the team
+team.join: You joined the team
+team.error: You cannot do this!
